hphp/test/zend/bad/ext-gd/imagesetthickness_error2.php
<?php
$image = imagecreatetruecolor(200, 100);

imagesetthickness($image, 's');
imagesetthickness($image, array());
imagesetthickness($image, $image);

?>